syntax = "proto3";

option java_package = "com.cinematica.backend.authorization.requests";

message SignUpRequest {
  string emailAddress = 1;
  string password = 2;
  string username = 3;

  message Response {
    string refreshToken = 1;
    string accessToken = 2;
  }
}